[gd_scene load_steps=12 format=3 uid="uid://b6725c0c0xjlq"]

[ext_resource type="Script" uid="uid://cdllqbftorkkc" path="res://player.gd" id="1_4flbx"]
[ext_resource type="FontFile" uid="uid://2851umohs3w7" path="res://Fonts/OstrichSans-Medium.otf" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://d28f38citiapg" path="res://Images/UX/MultiplayerCurser.png" id="3_i3pqv"]
[ext_resource type="FontFile" uid="uid://cs1hdaxjcskix" path="res://Fonts/Venus Rising Rg.otf" id="4_hqtel"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"grab",
"speed": 5.0
}]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4flbx"]
radius = 0.4
height = 1.5

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_4flbx"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_onrkg"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Name:text")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")

[node name="Curser" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5294118)
position = Vector2(576, 320)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_2hs0m")
autoplay = "default"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 1, 0)
mesh = SubResource("CapsuleMesh_sh265")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.742278e-08, 0, -8.742278e-08, -1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_4flbx")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)

[node name="SpringArm3D" type="SpringArm3D" parent="Camera3D"]
shape = SubResource("SeparationRayShape3D_4flbx")
spring_length = -2.0

[node name="Grabber" type="Node3D" parent="Camera3D/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
text = "Player Name"
font = ExtResource("2_onrkg")
uppercase = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_onrkg")

[node name="ObjectNameLabel" type="Label" parent="."]
visible = false
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_fonts/font = ExtResource("2_onrkg")
theme_override_font_sizes/font_size = 50
text = "Object Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 128.0
offset_right = -128.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TabMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="PlayersLabel" type="Label" parent="TabMenu"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 295.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("4_hqtel")
theme_override_font_sizes/font_size = 32
text = "Players:"

[node name="Players" type="Label" parent="TabMenu"]
layout_mode = 0
offset_left = 64.0
offset_top = 104.0
offset_right = 384.0
offset_bottom = 311.0
theme_override_fonts/font = ExtResource("2_onrkg")
theme_override_font_sizes/font_size = 32
text = "Player
Player
Player
Player
Player"

[node name="LobbyIDLabel" type="Label" parent="TabMenu"]
layout_mode = 0
offset_left = 448.0
offset_top = 64.0
offset_right = 670.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("4_hqtel")
theme_override_font_sizes/font_size = 32
text = "Lobby ID:"

[node name="LobbyID" type="Label" parent="TabMenu"]
layout_mode = 0
offset_left = 448.0
offset_top = 104.0
offset_right = 1328.0
offset_bottom = 152.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_onrkg")
theme_override_font_sizes/font_size = 32
text = "Lobby ID"

[node name="Button" type="Button" parent="TabMenu"]
layout_mode = 0
offset_left = 448.0
offset_top = 136.0
offset_right = 640.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("4_hqtel")
text = "Copy Lobby ID"

[connection signal="pressed" from="TabMenu/Button" to="." method="_on_button_pressed"]
